samples/_failures_safe/1761343122_a3a020_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_36a6bd08.c: In function ‘main’:
./samples/SAFE/__tmp_36a6bd08.c:143:5: error: expected expression at end of input
  143 |     } else
      |     ^
./samples/SAFE/__tmp_36a6bd08.c:143:5: error: expected declaration or statement at end of input
